# cndb

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: api.rs  lib.rs
src/document/: mod.rs  query.rs
src/storage/: engine.rs  file_format.rs  mod.rs
src/vector/: embeddings.rs  index.rs  mod.rs
