[package]
name = "cndb"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bson = "2.8"
bincode = "1.3"
thiserror = "1.0"
rust-bert = "0.21"
hnsw = "0.11"
console = { version = "0.16", features = ["std"] }

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"
